--- a/dev/backend/토비의 스프링 3.1 Vol 1/1. 오브젝트와 의존관계/1.1 초난감 DAO.md
+++ b/dev/backend/토비의 스프링 3.1 Vol 1/1. 오브젝트와 의존관계/1.1 초난감 DAO.md
@@ -1,4 +1,5 @@
-# 1.1.1 User
+## 1.1 초난감 DAO
+### 1.1.1 User
 
 <strong> DAO(Data Access Object) : </strong> \
 DB를 사용해 데이터를 조회하거나 조작하는 기능을 전담하도록 만든 오브젝트
