feat: Q41~60 Keyword Note

--- a/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
+++ b/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
@@ -28,3 +28,19 @@
 35. Amazon GuardDuty, Amazon Inspector, AWS Shield
 39. Provisioned IOPS SSD
 40. Amazon OpenSearch Service (Amazon Elasticsearch Service)
+41. Amazon AppFlow, Amazon Elastic Container Service
+42. NAT gateway
+43. AWS Management Console
+44. MFA
+46. Personally Identifiable Information (PII)
+48. Amazon Elastic File System (Amazon EFS)
+49. Amazon S3 Glacier Instant Retrieval, Amazon S3 Intelligent-Tiering
+50. AWS Systems Manager Patch Manager
+51. Amazon Kinesis Data Firehose, Amazon Simple Email Service(Amazon SES)
+52. Elastic Kubernetes Service (Amazon EKS), Amazon Elastic Block Store (Amazon EBS)
+53. S3 One Zone-Infrequent Access (S3 One Zone-IA)
+56. AWS Certificate Manager (ACM)
+57. Amazon Comprehend, Amazon Rekognition, Amazon SageMaker
+58. Amazon Machine Image (AMI)
+59. Amazon CloudFront, Amazon Kinesis Data Streams
+60. Application Load Balancer(ALB), Server Name Indication (SNI)
