--- a/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
+++ b/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
@@ -1,46 +1,417 @@
-1. S3 Transfer Acceleration
-2. Amazon Redshift, Amazon Athena, AWS Glue, Amazon EMR, Apache Spark Cluster
-3. AWS Cloud Trail
-4. Gateway VPC Endpoint
-5. Amazon EFS
-6. AWS Snowball Edge, S3 File Gateway
-7. Amazon Kinesis Data Analytics, Amazon Kinesis Data Streams, Amazon Simple Queue Service (Amazon SQS), Amazon Simple Notification Service (Amazon SNS)
-8. Auto Scaling, Amazon Event Bridge
-9. AWS Data Sync, S3 Glocier Deep Archive, S3 Cluster Flexible Retrieval
-10. Amazon API Gateway REST API
-11. AWS Secrets Manager, AWS Systems Manager Parameter Store, AWS Key Management Service (AWS KMS), Amazon Elastic Block Store (Amazon EBS)
-12. Application Load Balancer (ALB), Route 53, CloudFront
-13. Configure Systems Manager, Amazon EventBridge
-15. Amazon GuardDuty, AWS Network Firewall, AWS Firewall Manager
-16. Amazon QuickSight
-19. Amazon Marketplace
-21. Application Load Balancer, Amazon Elastic Kubernetes Service (Amazon EKS), Kubernetes Cluster Autoscaler
-22. S3 Standard, S3 Intelligent-Tiering, S3 Standard-Infrequent Access (S3 Standard-IA), S3 One Zone-Infrequent Access (S3 One Zone-IA)
-23. S3 Standard to S3 Glacier Deep Archive
-25. Amazon DynamoDB Provision, DynamoDB Accelerator(DAX)
-27. Bastion Server
-28. AWS Single Sign-On (AWS SSO), Identity Provider (IdP)
-29. Voice over Internet Protocol (VolP), Network Load Balancer (NLB), Application Load Balancer (ALB)
-31. AWS Config, Cost Explorer
-32. AWS Fargate
-33. Amazon Kinesis Data Firehose, Amazon Kinesis Data Streams
-34. AWS CloudTrail
-35. Amazon GuardDuty, Amazon Inspector, AWS Shield
-39. Provisioned IOPS SSD
-40. Amazon OpenSearch Service (Amazon Elasticsearch Service)
-41. Amazon AppFlow, Amazon Elastic Container Service
-42. NAT gateway
-43. AWS Management Console
-44. MFA
-46. Personally Identifiable Information (PII)
-48. Amazon Elastic File System (Amazon EFS)
-49. Amazon S3 Glacier Instant Retrieval, Amazon S3 Intelligent-Tiering
-50. AWS Systems Manager Patch Manager
-51. Amazon Kinesis Data Firehose, Amazon Simple Email Service(Amazon SES)
-52. Elastic Kubernetes Service (Amazon EKS), Amazon Elastic Block Store (Amazon EBS)
-53. S3 One Zone-Infrequent Access (S3 One Zone-IA)
-56. AWS Certificate Manager (ACM)
-57. Amazon Comprehend, Amazon Rekognition, Amazon SageMaker
-58. Amazon Machine Image (AMI)
-59. Amazon CloudFront, Amazon Kinesis Data Streams
-60. Application Load Balancer(ALB), Server Name Indication (SNI)
+**S3 Transfer Acceleration**
+- 설명: S3 Transfer Acceleration은 Amazon S3에 파일을 업로드하고 다운로드할 때 전송 속도를 높이는 기능으로, AWS 글로벌 네트워크를 통해 트래픽을 라우팅합니다. 
+  - 사용 사례: 대용량 파일을 업로드할 때나 여러 지역에서 데이터를 업로드하는 사용자에게 유용합니다. 지연 시간을 줄이고 전송 속도를 개선합니다.
+
+**Amazon Redshift, Amazon Athena, AWS Glue, Amazon EMR, Apache Spark Cluster**
+- Amazon Redshift: 대규모 데이터 분석을 위한 완전 관리형 데이터 웨어하우스 서비스입니다.
+  - 사용 사례: OLAP(온라인 분석 처리) 및 대규모 데이터 분석에 적합합니다.
+- Amazon Athena: S3에 저장된 데이터를 SQL을 사용해 분석할 수 있게 해주는 대화형 쿼리 서비스입니다.
+  - 사용 사례: S3에 저장된 데이터에 대한 즉석 쿼리와 분석에 적합합니다.
+- AWS Glue: 데이터 분석을 위해 데이터를 준비하는 완전 관리형 ETL(추출, 변환, 적재) 서비스입니다.
+  - 사용 사례: 데이터 준비 및 카탈로그 자동화에 유용하며, 데이터 레이크에 적합합니다.
+- Amazon EMR (Elastic MapReduce): Apache Hadoop 및 Apache Spark와 같은 빅데이터 프레임워크를 쉽게 실행할 수 있는 관리형 클러스터 플랫폼입니다.
+  - 사용 사례: 대량의 데이터를 빠르게 처리할 때 유용하며, 로그 분석, 데이터 변환, 기계 학습 작업 등에 사용됩니다.
+- Apache Spark Cluster: 대규모 데이터 처리를 위한 통합 분석 엔진으로, 스트리밍, SQL, 기계 학습 및 그래프 처리 모듈이 내장되어 있습니다.
+  - 사용 사례: 대규모 데이터 작업을 위한 인메모리 데이터 처리가 필요할 때 사용되며, EMR과 함께 자주 사용됩니다.
+
+**AWS Cloud Trail**
+- 설명: AWS CloudTrail은 AWS 계정의 거버넌스, 준수 및 운영 및 리스크 감사 기능을 제공하는 서비스입니다. 
+  - 사용 사례: AWS 인프라 전반에서 사용자 활동 및 API 사용을 추적하여 준수 및 보안 요구 사항을 충족하는 데 사용됩니다.
+
+**Gateway VPC Endpoint**
+- 설명: Gateway VPC Endpoint는 인터넷 게이트웨이, NAT 장치, VPN 연결 또는 AWS Direct Connect 연결 없이 VPC와 AWS 서비스 간의 비공식적 연결을 제공합니다. 
+  - 사용 사례: S3 및 DynamoDB에 안전하게 접근할 때 유용하며, 인터넷에 데이터를 노출하지 않고 사용할 수 있습니다.
+
+**Amazon EFS**
+- 설명: AWS 클라우드 서비스와 온프레미스 리소스와 함께 사용할 수 있는 확장 가능하고 완전 관리형 파일 저장 서비스입니다. 
+  - 사용 사례: 콘텐츠 관리 시스템, 웹 서버, 빅데이터 애플리케이션 등 파일 공유가 필요한 경우에 적합합니다.
+
+**AWS Snowball Edge, S3 File Gateway**
+- AWS Snowball Edge: 대량의 데이터를 AWS로 이동하기 위한 저장 및 컴퓨팅 기능을 갖춘 데이터 전송 장치입니다.
+  - 사용 사례: 대규모 데이터 마이그레이션 시 유용하며, 대역폭이 제한된 상황에서 사용됩니다.
+
+- S3 File Gateway: 온프레미스 애플리케이션이 Amazon S3 저장소에 파일 인터페이스를 통해 접근할 수 있게 해주는 서비스입니다.
+  - 사용 사례: 하이브리드 클라우드 스토리지에서 S3에 데이터를 저장하면서 표준 파일 프로토콜을 통해 접근할 필요가 있을 때 유용합니다.
+
+**Amazon Kinesis Data Analytics, Amazon Kinesis Data Streams, Amazon Simple Queue Service (Amazon SQS), Amazon Simple Notification Service (Amazon SNS)**
+- Amazon Kinesis Data Analytics: SQL을 사용해 스트리밍 데이터를 실시간으로 처리하고 분석할 수 있게 해주는 서비스입니다.
+  - 사용 사례: 스트리밍 데이터에 대한 실시간 분석이 필요할 때 유용합니다.
+
+- Amazon Kinesis Data Streams: 실시간 스트리밍 데이터를 수집, 처리 및 분석할 수 있게 해주는 서비스입니다.
+  - 사용 사례: 시스템 로그 모니터링, 이벤트 처리와 같은 실시간 애플리케이션 구축에 적합합니다.
+
+- Amazon SQS (Simple Queue Service): 마이크로서비스, 분산 시스템 및 서버리스 애플리케이션의 분리를 가능하게 하는 완전 관리형 메시지 큐 서비스입니다.
+  - 사용 사례: 애플리케이션 구성 요소 간의 신뢰성 있는 통신을 보장하기 위해 메시지를 큐잉할 때 사용됩니다.
+
+- Amazon SNS (Simple Notification Service): 구독하는 엔드포인트나 클라이언트에 메시지를 전달할 수 있게 해주는 완전 관리형 게시/구독 메시징 서비스입니다.
+  - 사용 사례: 분산 시스템에 알림과 메시지를 보내거나 워크플로를 트리거하는 데 유용합니다.
+
+**Auto Scaling, Amazon Event Bridge**
+- Auto Scaling: 트래픽 패턴이나 예약된 시간에 따라 EC2 인스턴스 수를 자동으로 조정하는 서비스입니다.
+  - 사용 사례: 성능을 유지하고 비용을 최소화하기 위해 리소스를 필요에 따라 확장하거나 축소할 때 유용합니다.
+
+- Amazon EventBridge: 이벤트를 사용하여 애플리케이션을 연결할 수 있게 해주는 서버리스 이벤트 버스 서비스입니다.
+  - 사용 사례: 이벤트 기반 아키텍처 구축에 유용하며, 서비스가 AWS 서비스 간의 변화 및 이벤트에 응답할 수 있게 합니다.
+
+**AWS Data Sync, S3 Glocier Deep Archive, S3 Cluster Flexible Retrieval**
+- AWS DataSync: 온프레미스 저장소와 AWS 저장 서비스 간의 데이터 전송을 단순화하고 자동화하며 가속화하는 데이터 전송 서비스입니다.
+  - 사용 사례: 자동화된 데이터 마이그레이션 및 복제 작업에 적합합니다.
+
+- S3 Glacier Deep Archive: 드물게 접근되는 데이터를 위한 저비용 저장 클래스이며 장기 아카이빙을 위해 설계되었습니다.
+  - 사용 사례: 데이터 검색이 드문 경우의 컴플라이언스 및 아카이브 용도로 적합합니다.
+
+- S3 Intelligent-Tiering: 데이터 접근 패턴의 변화에 따라 데이터를 가장 비용 효율적인 저장 계층으로 자동 이동시키는 S3 저장 클래스입니다.
+  - 사용 사례: 접근 패턴이 불확실하거나 예측할 수 없는 데이터에 적합하여 비용을 최적화하면서 성능을 유지합니다.
+
+**Amazon API Gateway REST API**
+- 설명: Amazon API Gateway는 RESTful API를 생성, 배포 및 관리할 수 있게 해주는 서비스입니다. 
+  - 사용 사례: 백엔드 서비스와의 통신을 위한 API를 쉽게 만들고, 사용자 인증 및 모니터링을 지원할 수 있습니다.
+
+**AWS Secrets Manager, AWS Systems Manager Parameter Store, AWS Key Management Service (AWS KMS), Amazon Elastic Block Store (Amazon EBS)**
+- AWS Secrets Manager: 비밀번호 및 API 키와 같은 비밀 정보를 안전하게 저장하고 관리할 수 있게 해주는 서비스입니다.
+  - 사용 사례: 애플리케이션에서 사용하는 데이터베이스 비밀번호를 안전하게 관리하고 자동으로 갱신할 수 있습니다.
+
+- AWS Systems Manager Parameter Store: 애플리케이션 설정 값 및 비밀 정보를 안전하게 저장하고 관리하는 서비스입니다.
+  - 사용 사례: 환경 변수나 구성 정보를 중앙에서 관리하고, 필요할 때 안전하게 조회할 수 있습니다.
+
+- AWS Key Management Service (AWS KMS): 데이터 암호화를 위한 키를 생성하고 관리하는 서비스입니다.
+  - 사용 사례: 데이터 보호를 위한 키 관리, 암호화 및 복호화에 사용됩니다.
+
+- Amazon Elastic Block Store (Amazon EBS): EC2 인스턴스에 대한 블록 스토리지 서비스를 제공합니다.
+  - 사용 사례: 데이터베이스와 같은 애플리케이션에 필요한 영구 저장소로 사용됩니다.
+
+**Application Load Balancer (ALB), Route 53, CloudFront**
+- Application Load Balancer (ALB): 애플리케이션 계층에서 HTTP/HTTPS 트래픽을 분산하는 로드 밸런서입니다.
+  - 사용 사례: 웹 애플리케이션의 트래픽을 여러 EC2 인스턴스로 분산하여 가용성과 성능을 향상시킵니다.
+
+- Route 53: AWS의 도메인 이름 시스템(DNS) 웹 서비스입니다.
+  - 사용 사례: 도메인 이름을 관리하고, 사용자 요청을 가장 가까운 리전으로 라우팅하여 지연 시간을 줄입니다.
+
+- CloudFront: AWS의 콘텐츠 전송 네트워크(CDN) 서비스입니다.
+  - 사용 사례: 정적 및 동적 콘텐츠를 전 세계적으로 빠르게 전송하여 사용자 경험을 개선합니다.
+
+**Configure Systems Manager, Amazon EventBridge**
+- Configure Systems Manager: AWS Systems Manager의 기능으로, 인프라 구성을 관리하고 설정할 수 있습니다.
+  - 사용 사례: EC2 인스턴스의 패치 관리 및 구성 상태를 모니터링합니다.
+
+- Amazon EventBridge: 이벤트 기반 아키텍처를 구축하는 데 사용되는 서버리스 이벤트 버스입니다.
+  - 사용 사례: 다양한 AWS 서비스와 애플리케이션 간의 이벤트를 쉽게 전달하고 처리합니다.
+
+**Amazon GuardDuty, AWS Network Firewall, AWS Firewall Manager**
+- Amazon GuardDuty: AWS 환경에서 비정상적인 활동을 모니터링하고 보안 위협을 탐지하는 서비스입니다.
+  - 사용 사례: AWS 계정 및 리소스에 대한 보안 감시와 위협 탐지에 사용됩니다.
+
+- AWS Network Firewall: VPC의 네트워크 트래픽을 보호하는 관리형 방화벽 서비스입니다.
+  - 사용 사례: VPC 내에서 트래픽을 필터링하고, 보안 규칙을 적용하여 네트워크를 보호합니다.
+
+- AWS Firewall Manager: AWS 환경에서 방화벽 규칙을 중앙에서 관리하는 서비스입니다.
+  - 사용 사례: 여러 AWS 계정 및 리전에서 방화벽 정책을 일관되게 적용하고 관리합니다.
+
+**Amazon QuickSight**
+- 설명: Amazon QuickSight는 클라우드 기반의 BI(Business Intelligence) 서비스로, 데이터를 시각화하고 분석할 수 있게 해줍니다. 
+  - 사용 사례: 대시보드 및 보고서를 생성하여 비즈니스 데이터를 쉽게 이해하고 인사이트를 도출할 수 있습니다.
+
+**Amazon Marketplace**
+- 설명: AWS에서 제공하는 마켓플레이스로, 서드파티 소프트웨어 및 서비스에 접근할 수 있게 해줍니다. 
+  - 사용 사례: 기업이 AWS 인프라와 통합하여 다양한 애플리케이션 및 서비스를 탐색하고 구매할 수 있습니다.
+
+**Application Load Balancer, Amazon Elastic Kubernetes Service (Amazon EKS), Kubernetes Cluster Autoscaler**
+- Application Load Balancer (ALB): 앞서 설명한 대로, HTTP/HTTPS 트래픽을 분산합니다.
+
+- Amazon Elastic Kubernetes Service (Amazon EKS): Kubernetes 클러스터를 관리할 수 있게 해주는 완전 관리형 서비스입니다.
+  - 사용 사례: Kubernetes를 사용하여 컨테이너화된 애플리케이션을 쉽게 배포하고 관리합니다.
+
+- Kubernetes Cluster Autoscaler: 클러스터의 리소스를 자동으로 조정하는 도구입니다.
+  - 사용 사례: 워크로드 변화에 따라 클러스터의 노드를 자동으로 추가하거나 제거하여 비용 효율성을 높입니다.
+
+**S3 Standard, S3 Intelligent-Tiering, S3 Standard-Infrequent Access (S3 Standard-IA), S3 One Zone-Infrequent Access (S3 One Zone-IA)**
+- S3 Standard: 빈번하게 접근되는 데이터를 위한 저장 클래스입니다.
+  - 사용 사례: 웹 사이트의 이미지나 동영상과 같이 자주 사용하는 데이터를 저장합니다.
+
+- S3 Intelligent-Tiering: 데이터 접근 패턴에 따라 자동으로 저장 계층을 조정합니다.
+  - 사용 사례: 예측할 수 없는 데이터 접근 패턴을 가진 데이터에 적합합니다.
+
+- S3 Standard-Infrequent Access (S3 Standard-IA): 자주 사용되지 않지만 즉시 필요할 수 있는 데이터에 적합한 저장 클래스입니다.
+  - 사용 사례: 오래된 백업 파일과 같이 가끔 접근되는 데이터를 저장합니다.
+
+- S3 One Zone-Infrequent Access (S3 One Zone-IA): 단일 가용 영역에 저장되며, 낮은 비용으로 자주 접근하지 않는 데이터를 저장합니다.
+  - 사용 사례: 재해 복구를 고려하지 않는 비즈니스 데이터 저장에 유용합니다.
+
+**S3 Standard to S3 Glacier Deep Archive**
+- 설명: S3 Standard에서 S3 Glacier Deep Archive로의 전환은 데이터를 저비용 장기 아카이브 저장소로 이동하는 것입니다. 
+  - 사용 사례: 데이터가 더 이상 자주 필요하지 않지만 보존해야 하는 경우, 예를 들어 규제 준수를 위해 아카이브해야 하는 데이터에 적합합니다.
+
+**Amazon DynamoDB Provision, DynamoDB Accelerator (DAX)**
+- DynamoDB Provision: DynamoDB에서 요구 사항에 따라 읽기 및 쓰기 용량을 미리 예약하는 기능입니다.
+  - 사용 사례: 예측 가능한 트래픽 패턴을 가진 애플리케이션에서 성능을 보장할 수 있습니다.
+
+- DynamoDB Accelerator (DAX): DynamoDB의 인메모리 캐시로, 초당 수천 건의 요청을 처리할 수 있도록 지원합니다.
+  - 사용 사례: 지연 시간이 짧은 데이터 접근이 필요한 애플리케이션에서 성능을 향상시킵니다.
+
+**Bastion Server**
+- 설명: 보안성이 높은 네트워크에 접근하기 위한 중계 서버입니다. 
+  - 사용 사례: 관리자가 내부 리소스에 안전하게 접근할 수 있도록 SSH를 통해 보안 연결을 제공합니다.
+
+**AWS Single Sign-On (AWS SSO), Identity Provider (IdP)**
+- AWS Single Sign-On (AWS SSO): 여러 AWS 계정과 비즈니스 애플리케이션에 대한 단일 로그인을 제공하는 서비스입니다.
+  - 사용 사례: 사용자가 여러 애플리케이션에 대한 액세스를 쉽게 관리할 수 있도록 지원합니다.
+
+- Identity Provider (IdP): 사용자 인증 및 ID 관리를 제공하는 시스템입니다.
+  - 사용 사례: AWS와 외부 애플리케이션 간의 사용자 인증을 통합하여 관리합니다.
+
+**Voice over Internet Protocol (VoIP), Network Load Balancer (NLB), Application Load Balancer (ALB)**
+- Voice over Internet Protocol (VoIP): 인터넷을 통해 음성 통신을 가능하게 하는 기술입니다.
+  - 사용 사례: 음성 통화를 인터넷으로 전송하여 전화 서비스의 비용을 줄입니다.
+
+- Network Load Balancer (NLB): TCP/UDP 트래픽을 효율적으로 분산하는 로드 밸런서입니다.
+  - 사용 사례: 고성능 네트워크 트래픽을 처리하고, 지연 시간을 최소화합니다.
+
+- Application Load Balancer (ALB): 앞서 설명한 대로 HTTP/HTTPS 트래픽을 분산합니다.
+
+**AWS Config, Cost Explorer**
+- AWS Config: AWS 리소스의 구성 및 변경 사항을 추적하는 서비스입니다.
+  - 사용 사례: 리소스의 변경 이력을 모니터링하고 규정 준수를 관리합니다.
+
+- Cost Explorer: AWS 사용량 및 비용을 시각적으로 분석할 수 있는 도구입니다.
+  - 사용 사례: 비용 사용 패턴을 이해하고 최적화하는 데 유용합니다.
+
+**AWS Fargate**
+- 설명: 컨테이너를 실행할 수 있는 서버리스 컴퓨팅 엔진으로, 인프라 관리 없이 애플리케이션을 배포할 수 있게 해줍니다. 
+  - 사용 사례: Kubernetes 또는 Amazon ECS에서 컨테이너를 간편하게 배포하고 관리할 수 있습니다.
+
+**Amazon Kinesis Data Firehose, Amazon Kinesis Data Streams**
+- Amazon Kinesis Data Firehose: 실시간으로 데이터를 수집하고, 변환하고, 저장하는 완전 관리형 서비스입니다.
+  - 사용 사례: 데이터 분석을 위한 S3 또는 Redshift로 데이터를 쉽게 전송합니다.
+
+- Amazon Kinesis Data Streams: 실시간 스트리밍 데이터를 수집하고 처리하는 서비스입니다.
+  - 사용 사례: 이벤트 기반 애플리케이션 및 데이터 스트리밍 처리에 사용됩니다.
+
+**AWS CloudTrail**
+- 설명: AWS 계정의 API 호출을 기록하고 모니터링하는 서비스입니다. 
+  - 사용 사례: 보안 감사를 위해 AWS 환경의 변경 이력을 추적합니다.
+
+**Amazon GuardDuty, Amazon Inspector, AWS Shield**
+- Amazon GuardDuty: AWS 환경에서 비정상적인 활동을 모니터링하고 보안 위협을 탐지하는 서비스입니다.
+
+- Amazon Inspector: 애플리케이션 보안을 평가하고 취약점을 찾아주는 서비스입니다.
+  - 사용 사례: 보안 위험을 사전에 식별하고 관리하여 시스템의 안전성을 높입니다.
+
+- AWS Shield: DDoS 공격으로부터 AWS 리소스를 보호하는 서비스입니다.
+  - 사용 사례: 애플리케이션을 DDoS 공격으로부터 보호하여 가용성을 유지합니다.
+
+**Provisioned IOPS SSD**
+- 설명: 고성능의 SSD 스토리지로, 미리 예약된 IOPS(입출력 작업 수)를 제공합니다. 
+  - 사용 사례: 데이터베이스와 같이 높은 성능과 일관성을 요구하는 애플리케이션에 적합합니다.
+
+**Amazon OpenSearch Service (Amazon Elasticsearch Service)**
+- 설명: 로그 분석, 검색 및 분석을 위한 관리형 검색 서비스입니다. 
+  - 사용 사례: 대규모 데이터 세트를 실시간으로 검색하고 분석하는 데 사용됩니다.
+
+**Amazon AppFlow, Amazon Elastic Container Service**
+- Amazon AppFlow: 클라우드 애플리케이션 간의 데이터 흐름을 자동화하는 서비스입니다.
+  - 사용 사례: Salesforce와 같은 SaaS 애플리케이션 간에 데이터를 쉽게 전송합니다.
+
+- Amazon Elastic Container Service (ECS): Docker 컨테이너를 쉽게 실행하고 관리할 수 있도록 돕는 서비스입니다.
+  - 사용 사례: 컨테이너화된 애플리케이션을 배포하고 확장하는 데 유용합니다.
+
+**NAT Gateway**
+- 설명: VPC에서 인터넷에 연결된 리소스가 외부와 통신할 수 있도록 해주는 서비스입니다. 
+  - 사용 사례: 프라이빗 서브넷에서 실행되는 인스턴스가 인터넷에 접근할 수 있도록 합니다.
+
+**AWS Management Console**
+- 설명: AWS 리소스를 관리할 수 있는 웹 기반 인터페이스입니다. 
+  - 사용 사례: AWS 서비스의 배포, 구성 및 모니터링을 용이하게 합니다.
+
+**MFA (Multi-Factor Authentication)**
+- 설명: 사용자 인증의 보안을 강화하기 위해 두 가지 이상의 인증 요소를 요구하는 방식입니다. 
+  - 사용 사례: AWS 계정의 보안을 강화하여 무단 접근을 방지합니다.
+
+**Personally Identifiable Information (PII)**
+- 설명: 개인을 식별할 수 있는 정보를 의미합니다. 
+  - 사용 사례: 데이터 보안 및 프라이버시 정책에 따라 PII를 안전하게 관리해야 합니다.
+
+**Amazon Elastic File System (Amazon EFS)**
+- 설명: AWS 클라우드 서비스와 온프레미스 리소스 간에 공유 가능한 파일 스토리지 서비스입니다. 
+  - 사용 사례: 여러 EC2 인스턴스에서 동시에 접근해야 하는 파일 저장에 적합합니다.
+
+**Amazon S3 Glacier Instant Retrieval, Amazon S3 Intelligent-Tiering**
+- Amazon S3 Glacier Instant Retrieval: 아카이브 데이터에 대한 빠른 접근을 제공하는 저장 클래스입니다.
+  - 사용 사례: 드물게 사용되지만 즉시 필요한 데이터 아카이빙에 적합합니다.
+
+- Amazon S3 Intelligent-Tiering: 접근 패턴에 따라 데이터를 자동으로 저장 계층으로 이동하는 기능을 제공합니다.
+  - 사용 사례: 데이터 접근 패턴이 불확실한 경우에 비용을 최적화합니다.
+
+**AWS Systems Manager Patch Manager**
+- 설명: AWS 리소스의 소프트웨어 패치를 자동으로 관리하고 적용하는 서비스입니다. 
+  - 사용 사례: 보안 및 성능을 유지하기 위해 EC2 인스턴스의 패치를 자동화합니다.
+
+**Amazon Kinesis Data Firehose, Amazon Simple Email Service (Amazon SES)**
+- Amazon Kinesis Data Firehose: 앞서 설명한 대로 실시간 데이터 수집 및 전송 서비스를 제공합니다.
+
+- Amazon Simple Email Service (SES): 이메일을 쉽게 보내고 받을 수 있는 관리형 서비스입니다.
+  - 사용 사례: 대량 이메일 발송 및 수신을 위한 비용 효율적인 솔루션을 제공합니다.
+
+**Elastic Kubernetes Service (Amazon EKS), Amazon Elastic Block Store (Amazon EBS)**
+- Elastic Kubernetes Service (Amazon EKS): Kubernetes 클러스터를 쉽게 관리할 수 있도록 도와주는 서비스입니다.
+
+- Amazon Elastic Block Store (Amazon EBS): EC2 인스턴스에 대한 블록 스토리지 서비스를 제공합니다.
+
+**S3 One Zone-Infrequent Access (S3 One Zone-IA)**
+- 설명: 단일 가용 영역에 저장된 저비용 저장 클래스입니다. 
+  - 사용 사례: 가끔 접근하는 데이터에 적합하며, 비용을 절감할 수 있습니다.
+
+**AWS Certificate Manager (ACM)**
+- 설명: SSL/TLS 인증서를 쉽게 관리하고 배포할 수 있는 서비스입니다. 
+  - 사용 사례: 웹 애플리케이션의 보안을 강화하기 위해 HTTPS를 설정하는 데 사용됩니다.
+
+**Amazon Comprehend, Amazon Rekognition, Amazon SageMaker**
+- Amazon Comprehend: 자연어 처리(NLP) 서비스로, 텍스트에서 인사이트를 추출합니다.
+  - 사용 사례: 고객 피드백 분석 및 텍스트 분류에 사용됩니다.
+
+- Amazon Rekognition: 이미지 및 비디오 분석을 위한 서비스입니다.
+  - 사용 사례: 얼굴 인식 및 객체 감지와 같은 기능에 사용됩니다.
+
+- Amazon SageMaker: 기계 학습 모델을 쉽게 구축, 훈련 및 배포할 수 있게 해주는 서비스입니다.
+  - 사용 사례: 데이터 과학자가 모델을 개발하고 프로덕션 환경에 배포할 수 있도록 지원합니다.
+
+**Amazon Machine Image (AMI)**
+- 설명: EC2 인스턴스를 시작하는 데 필요한 모든 정보를 포함하는 템플릿입니다. 
+  - 사용 사례: 애플리케이션의 배포 및 복구를 용이하게 하는 기본 이미지로 사용됩니다.
+
+**Amazon CloudFront, Amazon Kinesis Data Streams**
+- Amazon CloudFront: 앞서 설명한 대로 콘텐츠 전송 네트워크 서비스입니다.
+
+- Amazon Kinesis Data Streams: 앞서 설명한 대로 실시간 데이터 스트리밍 서비스입니다.
+
+**Application Load Balancer (ALB), Server Name Indication (SNI)**
+- Application Load Balancer (ALB): 앞서 설명한 대로 HTTP/HTTPS 트래픽을 분산합니다.
+
+- Server Name Indication (SNI): SSL/TLS 연결을 설정할 때 클라이언트가 연결하려는 서버의 호스트 이름을 제공하는 확장 기능입니다.
+  - 사용 사례: 여러 도메인 이름에 대해 단일 IP 주소에서 SSL 인증서를 사용할 수 있도록 합니다.
+
+**Amazon CloudWatch Events, AWS Systems Manager Parameter Store**
+- Amazon CloudWatch Events: AWS 리소스 및 애플리케이션 상태를 모니터링하고 이벤트를 관리하는 서비스입니다.
+
+- AWS Systems Manager Parameter Store: 앞서 설명한 대로 애플리케이션 설정 및 비밀 정보를 안전하게 저장하고 관리하는 서비스입니다.
+
+**Certificate Authority (CA)**
+- 설명: SSL/TLS 인증서를 발급하고 관리하는 신뢰할 수 있는 기관입니다. 
+  - 사용 사례: 웹사이트의 신뢰성을 보장하기 위해 SSL 인증서를 발급합니다.
+
+**AWS Elastic Beanstalk**
+- 설명: 애플리케이션을 쉽게 배포하고 관리할 수 있도록 해주는 PaaS 서비스입니다. 
+  - 사용 사례: 웹 애플리케이션을 신속하게 배포하고 관리할 수 있는 환경을 제공합니다.
+
+**FSx for Windows File Server, S3 File Gateway, FSx File Gateway**
+- FSx for Windows File Server: 완전 관리형 Windows 파일 시스템으로, SMB 프로토콜을 지원합니다.
+  - 사용 사례: Windows 환경에서 파일 공유를 위한 스토리지로 사용됩니다.
+
+- S3 File Gateway: 온프레미스 애플리케이션과 Amazon S3 간의 파일 저장소를 연결하는 서비스입니다.
+  - 사용 사례: 기존 애플리케이션이 S3에 파일을 저장할 수 있도록 지원합니다.
+
+- FSx File Gateway: Amazon FSx 스토리지를 온프레미스 애플리케이션에 연결하는 서비스입니다.
+  - 사용 사례: 온프레미스 데이터와 클라우드 스토리지를 통합하여 효율적으로 관리합니다.
+
+**Protected Health Information (PHI), Amazon Textract, Amazon SageMaker, Amazon Comprehend Medical**
+- Protected Health Information (PHI): 개인의 건강 정보로, 보안이 필요합니다.
+  - 사용 사례: 의료 데이터 관리 및 보호에 대한 규제를 준수합니다.
+
+- Amazon Textract: 문서에서 데이터를 자동으로 추출하는 서비스입니다.
+  - 사용 사례: 스캔한 문서에서 텍스트 및 데이터 구조를 추출하여 처리합니다.
+
+- Amazon SageMaker: 앞서 설명한 대로 기계 학습 모델을 개발할 수 있게 해주는 서비스입니다.
+
+- Amazon Comprehend Medical: 의료 데이터를 분석하여 인사이트를 제공하는 서비스입니다.
+  - 사용 사례: 의료 기록 및 환자 피드백에서 정보를 추출합니다.
+
+**S3 One Zone-Infrequent Access (S3 One Zone-IA), S3 Standard-Infrequent Access (S3 Standard-IA)**
+- S3 One Zone-Infrequent Access (S3 One Zone-IA): 앞서 설명한 대로 단일 가용 영역에 저장된 저비용 저장 클래스입니다.
+
+- S3 Standard-Infrequent Access (S3 Standard-IA): 앞서 설명한 대로 자주 사용되지 않는 데이터에 적합한 저장 클래스입니다.
+
+**Provision an AWS Direct Connect**
+- 설명: AWS와 온프레미스 데이터 센터 간에 전용 네트워크 연결을 설정하는 서비스입니다. 
+  - 사용 사례: 안정적이고 빠른 네트워크 연결이 필요한 기업 환경에서 사용됩니다.
+
+**Multi-AZ, Amazon RDS Proxy**
+- Multi-AZ: Amazon RDS에서 높은 가용성을 제공하기 위한 구성입니다.
+  - 사용 사례: 데이터베이스 인스턴스를 여러 가용 영역에 배포하여 장애 조치를 지원합니다.
+
+- Amazon RDS Proxy: Amazon RDS 데이터베이스에 대한 연결을 관리하여 성능과 가용성을 향상시키는 서비스입니다.
+  - 사용 사례: 데이터베이스 연결의 부하를 줄이고, 애플리케이션 성능을 개선합니다.
+
+**Recovery Point Objective (RPO), Recovery Time Objective (RTO)**
+- Recovery Point Objective (RPO): 데이터 복구 시점의 최대 허용 시간입니다.
+  - 사용 사례: 데이터 손실을 최소화하기 위한 백업 전략을 계획합니다.
+
+- Recovery Time Objective (RTO): 시스템 복구에 필요한 최대 시간을 정의합니다.
+  - 사용 사례: 비즈니스 연속성을 확보하기 위한 복구 계획을 수립합니다.
+
+**NAT Gateway**
+- 설명: 앞서 설명한 대로 VPC의 프라이빗 서브넷에서 인터넷에 연결하는 서비스입니다.
+
+**Linux-based Bastion Host**
+- 설명: Linux 기반의 보안 중계 서버로, 관리자가 내부 네트워크에 안전하게 접근할 수 있게 해줍니다. 
+  - 사용 사례: SSH를 통해 안전하게 서버에 접근할 수 있는 환경을 제공합니다.
+
+**Storage Area Network (SAN), AWS DataSync, AWS Database Migration Service**
+- Storage Area Network (SAN): 스토리지 장치를 네트워크로 연결하여 데이터 저장 및 관리하는 시스템입니다.
+  - 사용 사례: 대규모 데이터 스토리지 솔루션으로 사용됩니다.
+
+- AWS DataSync: 온프레미스 저장소와 AWS 저장 서비스 간의 데이터 전송을 자동화하는 서비스입니다.
+
+- AWS Database Migration Service: 데이터베이스를 AWS로 마이그레이션하는 데 도움을 주는 서비스입니다.
+  - 사용 사례: 기존 데이터베이스를 AWS로 간편하게 이전할 수 있도록 지원합니다.
+
+**Amazon Kinesis Data Stream, Amazon Kinesis Data Firehose**
+- Amazon Kinesis Data Stream: 앞서 설명한 대로 실시간 데이터 스트리밍 서비스입니다.
+
+- Amazon Kinesis Data Firehose: 앞서 설명한 대로 데이터 수집 및 전송 서비스를 제공합니다.
+
+**AWS Managed Service Provider (MSP), Amazon Machine Image (AMI), AWS Key Management Service (AWS KMS)**
+- AWS Managed Service Provider (MSP): AWS 리소스와 서비스를 관리하는 전문 서비스 제공업체입니다.
+  - 사용 사례: 기업의 AWS 환경을 관리하고 최적화합니다.
+
+- Amazon Machine Image (AMI): 앞서 설명한 대로 EC2 인스턴스를 시작하는 데 필요한 템플릿입니다.
+
+- AWS Key Management Service (AWS KMS): 앞서 설명한 대로 데이터 암호화를 위한 키를 관리하는 서비스입니다.
+
+**Spot Instance, Reserved Instance, Spot Block, On-Demand Instance**
+- Spot Instance: AWS의 잉여 용량을 저렴한 가격에 이용할 수 있는 EC2 인스턴스입니다.
+  - 사용 사례: 비용 효율적인 방식으로 비정기적인 워크로드를 처리합니다.
+
+- Reserved Instance: 특정 기간 동안 EC2 인스턴스를 예약하여 비용을 절감하는 옵션입니다.
+  - 사용 사례: 예측 가능한 워크로드에 대한 비용을 최적화합니다.
+
+- Spot Block: 정해진 시간 동안 Spot Instance를 예약하는 옵션입니다.
+  - 사용 사례: 특정 시간에 필요한 리소스를 사전에 예약하여 예기치 않은 중단을 방지합니다.
+
+- On-Demand Instance: 사용자가 필요할 때마다 EC2 인스턴스를 시작할 수 있는 유연한 옵션입니다.
+  - 사용 사례: 예측할 수 없는 워크로드에 적합하며, 필요에 따라 확장할 수 있습니다.
+
+**AWS Systems Manager OpsCenter**
+- 설명: AWS 리소스의 운영 문제를 관리하고 해결할 수 있는 서비스입니다. 
+  - 사용 사례: 인프라의 상태를 모니터링하고, 문제를 중앙에서 관리합니다.
+
+**S3 Cross-Region Replication**
+- 설명: S3 버킷의 데이터를 다른 리전의 S3 버킷으로 자동으로 복제하는 기능입니다. 
+  - 사용 사례: 데이터 중복성을 확보하고 재해 복구를 위한 전략으로 사용됩니다.
+
+**RDS Single-AZ DB Instance, Amazon ElastiCache**
+- RDS Single-AZ DB Instance: 단일 가용 영역에 배포된 RDS 데이터베이스 인스턴스입니다.
+  - 사용 사례: 비용 효율적인 테스트 및 개발 환경에 적합합니다.
+
+- Amazon ElastiCache: 인메모리 캐시 서비스를 제공하여 애플리케이션 성능을 향상시킵니다.
+  - 사용 사례: 데이터베이스 쿼리의 응답 시간을 줄이고, 높은 성능을 요구하는 애플리케이션에 사용됩니다.
+
+**Multi-AZ Aurora Replicas**
+- 설명: Amazon Aurora의 고가용성 및 자동 장애 조치를 위한 복제본입니다. 
+  - 사용 사례: 데이터베이스의 성능을 향상시키고 가용성을 높입니다.
+
+**Amazon EMR**
+- 설명: 빅데이터 처리 및 분석을 위한 관리형 클러스터 서비스입니다. 
+  - 사용 사례: 대규모 데이터 처리 작업을 쉽게 실행하고 관리합니다.
+
+**Lustre**
+- 설명: 고성능 컴퓨팅(HPC) 워크로드를 지원하는 분산 파일 시스템입니다. 
+  - 사용 사례: 데이터 집약적인 애플리케이션 및 과학적 계산에 사용됩니다.
