--- a/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
+++ b/devoops/aws/SSA-C03/ExamTopics Keyword/Q1~100.md
@@ -238,7 +238,7 @@
 - Amazon S3 Glacier Instant Retrieval: 아카이브 데이터에 대한 빠른 접근을 제공하는 저장 클래스입니다.
   - 사용 사례: 드물게 사용되지만 즉시 필요한 데이터 아카이빙에 적합합니다.
 
-- Amazon S3 Intelligent-Tiering: 접근 패턴에 따라 데이터를 자동으로 저장 계층으로 이동하는 기능을 제공합니다.
+- Amazon S3 0Intelligent-Tiering: 접근 패턴에 따라 데이터를 자동으로 저장 계층으로 이동하는 기능을 제공합니다.
   - 사용 사례: 데이터 접근 패턴이 불확실한 경우에 비용을 최적화합니다.
 
 **AWS Systems Manager Patch Manager**
