--- a/devoops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
+++ b/devoops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
@@ -45,3 +45,45 @@
 **AWS Firewall Manager**
 
 **AWS Global Accelerator**
+
+**Origin Access ID (OAI)**
+
+**Disaster Recovery**
+
+**AWS PrivateLink**
+
+**AWS Database Migration Service (AWS DMS)**
+
+**AWS Schema Conversion Tool(AWS SCT)**
+
+**Amazon MQ**
+
+**RabbitMQ**
+
+**Amazon RDS for PostgreSQL**
+
+**Compute Saving Plan**
+
+**Application Stack**
+
+**AWS Global Accelerator**
+
+**Amazon CloudWatch Synthetics**
+
+**AWS Control Tower**
+
+**AWS WAF**
+
+**AWS Organizations**
+
+**AWS Systems Manager Session Manager**
+
+**Amazon Elastic Container Registery(Amazon ECR)**
+
+**Amazon RDS Proxy**
+
+**Dynamo DB**
+
+**Amazon DynamoDB Accelerator(DAX)**
+
+**AWS Systems Manager Parameter Store**
