--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
@@ -87,3 +87,31 @@
 **Amazon DynamoDB Accelerator(DAX)**
 
 **AWS Systems Manager Parameter Store**
+
+**AWS Shield Advanced**
+
+**AWS Shield Standard**
+
+**DynamoDB Streams**
+
+**DynamoDB Streams API**
+
+**Amazon DynamoDB**
+
+**AWS Transfer Family**
+
+**S3 Object Lock in compliance mode**
+
+**S3 Object Lock in governance mode**
+
+**AWS Elastic Beanstalk**
+
+**Amazon Rekognition, Amazon Textract**
+
+**Redis, Memcached**
+
+**AWS CloudFormation**
+
+**Dynamo DB TTL**
+
+**Amazon Cognito**
