feat: 각 정리한 keyword 간단하게 설명 및 사용 예시

--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q101~200.md
@@ -1,117 +1,226 @@
-**Amazon Elastic File System (Amazon EFS)**
+1. Amazon Elastic File System (Amazon EFS)
+설명: 확장성이 뛰어난 서버리스 파일 스토리지 서비스로, EC2 인스턴스와 온프레미스 리소스에서 사용할 수 있습니다.
+예시: 여러 EC2 인스턴스가 동시에 EFS에 저장된 데이터를 공유하는 웹 애플리케이션.
 
-**AWS DataSync**
+2. AWS DataSync
+설명: 온프레미스 스토리지와 AWS 간의 데이터 전송을 자동화하고 가속화하는 서비스입니다.
+예시: 대량의 파일을 온프레미스 NAS에서 S3로 정기적으로 전송하는 작업.
 
-**Amazon Elastic Block Store (Amazon EBS)**
+3. Amazon Elastic Block Store (Amazon EBS)
+설명: EC2 인스턴스에 연결할 수 있는 블록 레벨 스토리지입니다.
+예시: EC2 인스턴스의 데이터베이스를 위한 EBS 볼륨 생성.
 
-**AWS Glue extract, transform, and load (ETL)**
+4. AWS Glue ETL
+설명: 데이터 추출, 변환 및 로딩(ETL) 작업을 자동화하고 관리하는 서비스입니다.
+예시: S3의 CSV 파일을 정제하여 Redshift에 로드하는 ETL 작업.
 
-**Job Bookmarks**
+5. Job Bookmarks
+설명: AWS Glue ETL 작업의 중단 지점을 기록하여 재처리 시 중복을 피하도록 돕는 기능입니다.
+예시: 대량의 데이터가 처리된 후 다음 ETL 실행 시 처리한 지점을 기억함.
 
-**AWS Shield Advanced**
+6. AWS Shield Advanced
+설명: DDoS 공격으로부터 애플리케이션을 보호하는 관리형 서비스입니다.
+예시: 웹 애플리케이션의 공격을 감지하고 방어하는 데 사용됩니다.
 
-**Amazon GuarDuty**
+7. Amazon GuardDuty
+설명: AWS 계정 및 워크로드에 대한 위협 탐지 서비스입니다.
+예시: 비정상적인 API 호출 패턴을 감지하여 경고를 발생.
 
-**resouce-based policy**
+8. Resource-based policy
+설명: 특정 리소스에 대한 접근 권한을 정의하는 정책으로, IAM 사용자와 역할 외에도 적용됩니다.
+예시: S3 버킷에 대해 특정 IAM 역할에 접근 권한을 부여하는 정책.
 
-**Server-side encryption with customer-provided keys (SSE-C)**
+9. Server-side encryption with customer-provided keys (SSE-C)
+설명: 고객이 제공하는 암호화 키를 사용하여 데이터를 S3에 저장할 때 암호화하는 방법입니다.
+예시: 사용자가 암호화 키를 제공하여 S3 객체를 암호화하는 경우.
 
-**Server-side encryption with Amazon S3 managed keys (SSE-S3)**
+10. Server-side encryption with Amazon S3 managed keys (SSE-S3)
+설명: Amazon S3가 관리하는 키를 사용하여 데이터를 자동으로 암호화하는 방법입니다.
+예시: S3에 업로드하는 모든 파일이 자동으로 SSE-S3로 암호화됨.
 
-**Server-side encryption with AWS KMS keys (SSE-KMS)**
+11. Server-side encryption with AWS KMS keys (SSE-KMS)
+설명: AWS Key Management Service (KMS)로 관리되는 키를 사용하여 데이터를 암호화하는 방법입니다.
+예시: S3 객체를 KMS 키로 암호화하여 보다 세부적인 권한 관리.
 
-**Amazon QuickSight with Amazon Redshift**
+12. Amazon QuickSight with Amazon Redshift
+설명: Amazon Redshift에 저장된 데이터를 시각화하고 분석하는 BI 도구입니다.
+예시: Redshift 데이터베이스에서 판매 데이터를 가져와 대시보드를 만드는 작업.
 
-**ActiveMQ**
+13. ActiveMQ
+설명: 오픈 소스 메시지 브로커로, JMS(Java Message Service)를 지원합니다.
+예시: 다양한 애플리케이션 간 메시지를 전송하고 수신하는 데 사용.
 
-**Amazon Elastic Container Service (Amazon ECS)**
+14. Amazon Elastic Container Service (Amazon ECS)
+설명: Docker 컨테이너를 쉽게 실행, 관리할 수 있는 클라우드 서비스입니다.
+예시: 여러 개의 컨테이너화된 마이크로서비스를 클러스터에서 운영하는 경우.
 
-**High Performance Computing (HPC)**
+15. High Performance Computing (HPC)
+설명: 대규모 연산을 필요로 하는 과학적 및 엔지니어링 작업을 지원하는 AWS 서비스입니다.
+예시: 복잡한 시뮬레이션을 수행하는 연구 프로젝트.
 
-**AWS Snowcone device**
+16. AWS Snowcone device
+설명: 작은 데이터 전송 및 엣지 컴퓨팅 장치로, 데이터를 AWS로 안전하게 전송합니다.
+예시: 오프라인 환경에서 수집한 데이터를 클라우드로 전송하는 장치.
 
-**AWS Snowball Edge Storage Optimized device**
+17. AWS Snowball Edge Storage Optimized device
+설명: 대량의 데이터를 이동하거나 처리하는 데 사용되는 AWS 장치입니다.
+예시: 원거리 위치에서 수집한 데이터를 S3로 전송하기 위해 사용하는 장치.
 
-**Popular Content Management System (CMS)**
+18. Popular Content Management System (CMS)
+설명: 웹 콘텐츠를 관리하는 소프트웨어로, AWS에서 호스팅될 수 있습니다.
+예시: WordPress를 사용하여 웹사이트 콘텐츠를 관리.
 
-**Amazon OpenSearch Service (Amazon Elasticsearch Service)**
+19. Amazon OpenSearch Service (Amazon Elasticsearch Service)
+설명: 실시간 검색과 분석을 위한 분산 검색 엔진 서비스입니다.
+예시: 로그 데이터 분석을 위한 Elasticsearch 클러스터 구성.
 
-**Kinesis Data Streams**
+20. Kinesis Data Streams
+설명: 실시간 데이터 스트리밍을 처리할 수 있는 서비스입니다.
+예시: IoT 장치에서 수집한 데이터를 실시간으로 처리하고 분석.
 
-**AWS WAF**
+21. AWS WAF
+설명: 웹 애플리케이션 방화벽으로, 웹 애플리케이션을 악성 트래픽으로부터 보호합니다.
+예시: 특정 IP 주소로부터의 요청을 차단하여 DDoS 공격 방어.
 
-**Associate Regional web ACLs**
+22. Associate Regional web ACLs
+설명: 특정 리전의 리소스에 대한 웹 ACL(Access Control List)을 연결하는 기능입니다.
+예시: 미국 동부 리전의 특정 CloudFront 배포에 웹 ACL을 연결.
 
-**AWS Firewall Manager**
+23. AWS Firewall Manager
+설명: 여러 계정 및 리전에서 AWS WAF 및 Shield를 중앙에서 관리할 수 있는 서비스입니다.
+예시: 모든 AWS 계정에서 동일한 WAF 규칙을 일관되게 적용.
 
-**AWS Global Accelerator**
+24. AWS Global Accelerator
+설명: 사용자 요청을 최적의 AWS 리전으로 라우팅하여 성능을 개선하는 서비스입니다.
+예시: 글로벌 사용자를 위해 최적의 리전으로 요청을 라우팅하여 빠른 응답 제공.
 
-**Origin Access ID (OAI)**
+25. Origin Access ID (OAI)
+설명: CloudFront에서 S3 버킷에 대한 액세스를 제어하기 위해 사용되는 식별자입니다.
+예시: CloudFront가 S3 버킷에서 콘텐츠를 가져올 수 있도록 권한을 부여.
 
-**Disaster Recovery**
+26. Disaster Recovery
+설명: 재해 발생 시 데이터와 시스템을 복구하는 전략입니다.
+예시: 주요 시스템의 백업을 정기적으로 수행하여 데이터 손실 방지.
 
-**AWS PrivateLink**
+27. AWS PrivateLink
+설명: VPC에서 AWS 서비스에 안전하게 접근할 수 있도록 하는 기능입니다.
+예시: VPC 내에서 S3에 안전하게 연결하는 경우.
 
-**AWS Database Migration Service (AWS DMS)**
+28. AWS Database Migration Service (AWS DMS)
+설명: 데이터베이스를 AWS로 또는 AWS 간에 쉽게 마이그레이션할 수 있는 서비스입니다.
+예시: 온프레미스 Oracle 데이터베이스를 Amazon RDS로 이전.
 
-**AWS Schema Conversion Tool(AWS SCT)**
+29. AWS Schema Conversion Tool (AWS SCT)
+설명: 데이터베이스 스키마를 다른 데이터베이스 엔진으로 변환하는 도구입니다.
+예시: Oracle 스키마를 PostgreSQL 형식으로 변환.
 
-**Amazon MQ**
+30. Amazon MQ
+설명: 관리형 메시지 브로커 서비스로, JMS 및 AMQP 프로토콜을 지원합니다.
+예시: 기존의 메시징 시스템을 클라우드로 이전하여 운영.
 
-**RabbitMQ**
+31. RabbitMQ
+설명: 오픈 소스 메시징 시스템으로, 다양한 프로그래밍 언어와 플랫폼을 지원합니다.
+예시: 마이크로서비스 간의 비동기 통신을 위해 RabbitMQ를 사용하는 경우.
 
-**Amazon RDS for PostgreSQL**
+32. Amazon RDS for PostgreSQL
+설명: PostgreSQL 데이터베이스를 클라우드에서 관리할 수 있도록 하는 서비스입니다.
+예시: 웹 애플리케이션의 데이터베이스로 Amazon RDS for PostgreSQL 사용.
 
-**Compute Saving Plan**
+33. Compute Saving Plan
+설명: AWS Compute 서비스에 대한 비용을 절감할 수 있도록 하는 요금제입니다.
+예시: EC2 및 Fargate 사용량에 대한 할인 요금제를 구매.
 
-**Application Stack**
+34. Application Stack
+설명: 특정 애플리케이션을 구축하는 데 필요한 모든 구성 요소의 집합입니다.
+예시: 웹 서버, 데이터베이스, 캐시 서버로 구성된 애플리케이션 스택.
 
-**AWS Global Accelerator**
+35. Amazon CloudWatch Synthetics
+설명: 애플리케이션의 가용성을 모니터링하기 위해 자동화된 테스트를 수행하는 서비스입니다.
+예시: 웹 애플리케이션의 URL을 정기적으로 확인하여 가용성을 모니터링.
 
-**Amazon CloudWatch Synthetics**
+36. AWS Control Tower
+설명: AWS 환경을 설정하고 관리하는 데 도움을 주는 서비스입니다.
+예시: 여러 AWS 계정을 중앙에서 관리하고 모범 사례를 적용하는 데 사용.
 
-**AWS Control Tower**
+37. AWS Organizations
+설명: 여러 AWS 계정을 중앙에서 관리할 수 있는 서비스입니다.
+예시: 여러 부서의 AWS 계정을 단일 조직으로 통합 관리.
 
-**AWS WAF**
+38. AWS Systems Manager Session Manager
+설명: EC2 인스턴스에 대한 안전한 쉘 액세스를 제공하는 기능입니다.
+예시: SSH 키 없이 인스턴스에 연결하여 관리 작업 수행.
 
-**AWS Organizations**
+39. Amazon Elastic Container Registry (Amazon ECR)
+설명: Docker 컨테이너 이미지를 저장하고 관리할 수 있는 서비스입니다.
+예시: CI/CD 파이프라인에서 애플리케이션 이미지를 ECR에 저장.
 
-**AWS Systems Manager Session Manager**
+40. Amazon RDS Proxy
+설명: RDS 데이터베이스에 대한 연결을 효율적으로 관리하는 프록시 서비스입니다.
+예시: 애플리케이션의 데이터베이스 연결 수를 줄이고 성능을 개선.
 
-**Amazon Elastic Container Registery(Amazon ECR)**
+41. DynamoDB
+설명: 완전관리형 NoSQL 데이터베이스 서비스입니다.
+예시: 사용자 정보를 저장하는 웹 애플리케이션의 데이터베이스.
 
-**Amazon RDS Proxy**
+42. Amazon DynamoDB Accelerator (DAX)
+설명: DynamoDB의 인메모리 캐시 서비스로, 응답 속도를 개선합니다.
+예시: 실시간 게임 데이터를 빠르게 조회하기 위해 DAX 사용.
 
-**Dynamo DB**
+43. AWS Systems Manager Parameter Store
+설명: 애플리케이션 구성 데이터를 안전하게 저장하고 관리할 수 있는 서비스입니다.
+예시: API 키와 같은 비밀 정보를 안전하게 저장하고 액세스.
 
-**Amazon DynamoDB Accelerator(DAX)**
+44. AWS Shield Advanced
+설명: AWS Shield Standard의 고급 버전으로, 추가적인 DDoS 보호 및 자동화된 응답 기능을 제공합니다.
+예시: DDoS 공격에 대한 세부 보고서와 함께 실시간 보호.
 
-**AWS Systems Manager Parameter Store**
+45. AWS Shield Standard
+설명: 기본 DDoS 방어 기능으로, 모든 AWS 고객에게 자동으로 제공됩니다.
+예시: CloudFront와 같은 서비스에서 기본적으로 제공되는 DDoS 보호.
 
-**AWS Shield Advanced**
+46. DynamoDB Streams
+설명: DynamoDB 테이블의 변경 사항을 실시간으로 캡처하는 기능입니다.
+예시: 데이터 변경 시 자동으로 알림을 보내는 애플리케이션.
 
-**AWS Shield Standard**
+47. DynamoDB Streams API
+설명: DynamoDB Streams에서 스트림 데이터를 읽고 처리하는 API입니다.
+예시: 변경 사항에 대해 트리거된 Lambda 함수로 데이터 처리.
 
-**DynamoDB Streams**
+48. Amazon DynamoDB
+설명: 앞서 설명된 것과 동일한 완전관리형 NoSQL 데이터베이스 서비스입니다.
 
-**DynamoDB Streams API**
+49. AWS Transfer Family
+설명: SFTP, FTPS, FTP를 지원하는 관리형 파일 전송 서비스입니다.
+예시: 안전한 파일 전송을 위해 S3와 연결된 SFTP 서버 구성.
 
-**Amazon DynamoDB**
+50. S3 Object Lock in compliance mode
+설명: S3 객체에 대한 삭제 방지를 보장하는 규정 준수 모드입니다.
+예시: 법적 요구 사항을 충족하기 위해 데이터를 영구히 보존하는 경우.
 
-**AWS Transfer Family**
+51. S3 Object Lock in governance mode
+설명: 객체를 보호하여 실수로 삭제되거나 변경되지 않도록 하는 모드입니다.
+예시: 관리자가 특정 기간 동안 객체를 변경할 수 없도록 설정.
 
-**S3 Object Lock in compliance mode**
+52. AWS Elastic Beanstalk
+설명: 웹 애플리케이션을 손쉽게 배포하고 관리할 수 있는 플랫폼입니다.
+예시: Node.js 애플리케이션을 Elastic Beanstalk에 배포하여 자동으로 인프라 관리.
 
-**S3 Object Lock in governance mode**
+53. Amazon Rekognition, Amazon Textract
+설명: Rekognition은 이미지 및 비디오 분석 서비스, Textract는 문서에서 데이터를 추출하는 서비스입니다.
+예시: Rekognition을 사용하여 얼굴 인식하고, Textract를 통해 스캔한 문서에서 텍스트를 추출.
 
-**AWS Elastic Beanstalk**
+54. Redis, Memcached
+설명: 인메모리 데이터 구조 저장소로, 고속 데이터 엑세스를 위한 캐시 솔루션입니다.
+예시: 웹 애플리케이션의 세션 데이터를 저장하기 위해 Redis를 사용.
 
-**Amazon Rekognition, Amazon Textract**
+55. AWS CloudFormation
+설명: 인프라를 코드로 관리하고 자동으로 배포할 수 있는 서비스입니다.
+예시: 인프라 설정을 YAML 파일로 정의하여 EC2와 RDS를 배포.
 
-**Redis, Memcached**
+56. DynamoDB TTL
+설명: DynamoDB 테이블에서 데이터 항목을 자동으로 만료시키는 기능입니다.
+예시: 세션 데이터가 만료되도록 TTL 설정하여 자동으로 삭제.
 
-**AWS CloudFormation**
-
-**Dynamo DB TTL**
-
-**Amazon Cognito**
+57. Amazon Cognito
+설명: 사용자 인증, 권한 부여 및 사용자 관리 서비스를 제공합니다.
+예시: 모바일 애플리케이션에서 사용자가 안전하게 로그인할 수 있도록 하는 서비스.
