--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q201~300.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q201~300.md
@@ -1,54 +1,107 @@
-**Amazon Connect**
+1. Amazon Connect
+설명: 클라우드 기반의 콜센터 서비스로, 고객과의 상호작용을 관리할 수 있습니다.
+예시: 고객 서비스 팀이 Amazon Connect를 사용하여 고객 전화 응대 및 관리하는 시스템을 구축할 수 있습니다.
 
-**Amazon Pinpoint**
+2. Amazon Pinpoint
+설명: 사용자와의 커뮤니케이션을 위한 마케팅 캠페인을 설계하고 실행할 수 있는 서비스입니다.
+예시: 앱 사용자에게 SMS나 이메일을 통해 프로모션 메시지를 보내는 데 사용됩니다.
 
-**Amazon Lake Foramtion**
+3. Amazon Lake Formation
+설명: 데이터 레이크를 쉽게 구축하고 관리할 수 있도록 돕는 서비스입니다.
+예시: 다양한 소스에서 데이터를 수집하여 중앙 집중식 데이터 레이크를 만들고 분석할 수 있습니다.
 
-**Apache Parquet**
+4. Apache Parquet
+설명: 열 기반의 저장 형식으로, 대규모 데이터 처리에 최적화되어 있습니다.
+예시: Amazon Athena에서 Parquet 파일을 사용하여 효율적으로 쿼리할 수 있습니다.
 
-**AWS Management Console**
+5. AWS Management Console
+설명: AWS 서비스를 관리할 수 있는 웹 기반 인터페이스입니다.
+예시: EC2 인스턴스를 시작하거나 S3 버킷을 관리하는 데 사용됩니다.
 
-**NAT Instance, NAT Gatewway**
+6. NAT Instance, NAT Gateway
+설명: VPC의 프라이빗 서브넷에서 인터넷에 접근할 수 있도록 하는 서비스입니다.
+예시: 프라이빗 인스턴스가 소프트웨어 업데이트를 다운로드할 때 NAT Gateway를 사용합니다.
 
-**AWS Systems Manager OpsItems**
+7. AWS Systems Manager OpsItems
+설명: 운영 문제를 중앙에서 관리하고 추적할 수 있는 서비스입니다.
+예시: 서비스 중단 문제를 기록하고 해결 상태를 추적하는 데 사용됩니다.
 
-**Amazon CloudWatch Application Insights**
+8. Amazon CloudWatch Application Insights
+설명: 애플리케이션의 상태를 모니터링하고 문제를 자동으로 감지하는 서비스입니다.
+예시: 웹 애플리케이션의 성능 저하를 감지하여 알림을 받을 수 있습니다.
 
-**AWS Database Migration Service (AWS DMS)**
+9. AWS Database Migration Service (AWS DMS)
+설명: 데이터베이스를 AWS 클라우드로 또는 클라우드 간에 쉽게 마이그레이션할 수 있는 서비스입니다.
+예시: 온프레미스 데이터베이스를 Amazon RDS로 이전하는 데 사용됩니다.
 
-**Peering**
+10. Peering
+설명: 두 VPC 간의 네트워크 트래픽을 직접 연결할 수 있는 기능입니다.
+예시: 서로 다른 AWS 계정의 VPC 간에 리소스를 공유할 수 있습니다.
 
-**Cost Explorer**
+11. Cost Explorer
+설명: AWS 사용 비용을 분석하고 예측하는 데 도움을 주는 도구입니다.
+예시: 지난 6개월간의 AWS 비용을 시각적으로 분석하여 사용 패턴을 이해합니다.
 
-**AWS Identity and Access Management (IAM)**
+12. AWS Identity and Access Management (IAM)
+설명: AWS 리소스에 대한 접근 권한을 관리할 수 있는 서비스입니다.
+예시: 특정 사용자에게 S3 버킷에 대한 읽기 권한만 부여할 수 있습니다.
 
-**AWS Direct Connect**
+13. AWS Direct Connect
+설명: 온프레미스 데이터 센터와 AWS 간의 전용 네트워크 연결을 제공하는 서비스입니다.
+예시: 대규모 데이터 전송 시 안정적인 연결을 위해 Direct Connect를 사용합니다.
 
-**DNS Routing Policy**
+14. DNS Routing Policy
+설명: Route 53에서 DNS 요청을 처리하는 방법을 설정하는 정책입니다.
+예시: 가용성을 높이기 위해 여러 리전에서 서비스 요청을 분산하는 데 사용됩니다.
 
-**AWS Storage Gateway**
+15. AWS Storage Gateway
+설명: 온프레미스 환경과 클라우드 스토리지 간의 하이브리드 스토리지 서비스를 제공합니다.
+예시: 기업이 기존 파일 시스템을 클라우드로 백업할 수 있도록 도와줍니다.
 
-**VPC CIDR**
+16. VPC CIDR
+설명: 가상 프라이빗 클라우드(VPC)의 IP 주소 범위를 정의하는 방법입니다.
+예시: VPC를 생성할 때 10.0.0.0/16과 같은 CIDR 블록을 지정합니다.
 
-**Amazon CloudWatch Metric Stream**
+17. Amazon CloudWatch Metric Stream
+설명: CloudWatch 지표를 실시간으로 수집하고 전송하는 기능입니다.
+예시: 애플리케이션의 성능 지표를 외부 시스템으로 전송하여 모니터링합니다.
 
-**Amazon Data Lifecycle Manager(Amazon DLM)**
+18. Amazon Data Lifecycle Manager (Amazon DLM)
+설명: EBS 볼륨의 스냅샷을 자동으로 생성하고 관리할 수 있는 서비스입니다.
+예시: 매일 스냅샷을 생성하고 보관 정책에 따라 삭제합니다.
 
-**Warm Standby Deployment**
+19. Warm Standby Deployment
+설명: 기본 인프라의 축소된 복제본을 유지하여 빠르게 복구할 수 있도록 하는 전략입니다.
+예시: 주요 데이터베이스의 리전 간 복제를 설정하여 재해 복구를 준비합니다.
 
-**Pilot Light Deployment**
+20. Pilot Light Deployment
+설명: 핵심 시스템만을 최소한으로 유지하고 나머지는 필요할 때 시작하는 복구 전략입니다.
+예시: 재해 발생 시 애플리케이션의 기본 기능만 유지하고 나머지는 비활성화합니다.
 
-**AWS CloudFormation**
+21. AWS CloudFormation
+설명: 인프라를 코드로 관리하고 자동으로 배포할 수 있는 서비스입니다.
+예시: YAML 또는 JSON 파일을 사용해 EC2 인스턴스와 RDS를 자동으로 배포합니다.
 
-**Amazon Macie**
+22. Amazon Macie
+설명: 데이터 보호를 위한 머신 러닝 기반의 서비스로, S3에서 민감한 정보를 식별하고 보호합니다.
+예시: 고객의 개인 정보를 포함한 데이터를 찾아 자동으로 알림을 보냅니다.
 
-**Amazon FSx for NetApp ONTAP**
+23. Amazon FSx for NetApp ONTAP
+설명: 관리형 파일 스토리지 서비스로, NetApp의 기능을 클라우드에서 제공합니다.
+예시: 기업이 온프레미스 NetApp 파일 시스템을 AWS로 이전하여 클라우드에서 사용하는 경우입니다.
 
-**Amazon Simple Email Service (Amazon SES)**
+24. Amazon Simple Email Service (Amazon SES)
+설명: 이메일 전송 및 수신을 위한 클라우드 기반 서비스입니다.
+예시: 마케팅 이메일이나 사용자 알림을 대량으로 발송하는 데 사용됩니다.
 
-**Amazon Lightsail**
+25. Amazon Lightsail
+설명: 간단한 애플리케이션과 웹사이트를 위해 설계된 가상 서버 서비스입니다.
+예시: 개인 블로그나 소규모 웹사이트를 운영하는 데 적합한 서버를 쉽게 설정합니다.
 
-**Amazon WorkMail**
+26. Amazon WorkMail
+설명: 클라우드 기반의 이메일 및 일정 관리 서비스입니다.
+예시: 기업에서 전자 메일과 일정 관리를 위해 WorkMail을 사용하는 경우입니다.
 
-**ASGAverageCPUUtilization**
-
+27. ASGAverageCPUUtilization
+설명: Auto Scaling 그룹의 평균 CPU 사용률을 나타내는 CloudWatch 지표입니다.
+예시: CPU 사용률이 특정 임계값을 초과하면 Auto Scaling이 추가 인스턴스를 생성하는 데 사용됩니다.
