--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
@@ -11,3 +11,20 @@
 **Amazon Macie**
 
 **Amazon Detective**
+
+**Amazon Data Lifecycle Manager(Amazon DLM)**
+
+**Amazon EMR**
+
+**QuickSight SPICE**
+
+**AWS Glue Studio**
+
+**AWS Glue Elastic Views**
+
+**AWS Lake Formation**
+
+**Lake Formation BluePrint**
+
+**Lambda@Edge**
+
