--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
@@ -28,3 +28,33 @@
 
 **Lambda@Edge**
 
+**AWS Step Functions**
+
+**io2 Block Express EBS**
+
+**SSD(gp2)**
+
+**Amazon Lightsail**
+
+**AWS Batch**
+
+**Amazon FSx for Window File Server**
+
+**General Purpose SSD(gp2) Amazon Elastic Block Store(Amazon EBS)**
+
+**Lambda@Edge**
+
+**CloudFront origin request policy, CloudFront response headers policy**
+
+**AWS App Runner**
+
+**NAT Instance VS NAT Gateway**
+
+**IPsec VPN tunnel**
+
+**AWS Step Function**
+
+**Amazon Transcribe**
+
+**AWS Cloud Trail**
+
