--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q401~500.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q401~500.md
@@ -3,3 +3,15 @@
 **Amazon Simple Email Service (Amazon SES)**
 
 **Compute Savings Plan**
+
+**AWS App Mesh**
+
+**Reduced Redundancy Storage(RRS)**
+
+**ElastiCache for Redis**
+
+**Amazon SageMaker**
+
+**AWS Marketplace**
+
+**AWS Transit Gateway**
