--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q401~500.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q401~500.md
@@ -15,3 +15,51 @@
 **AWS Marketplace**
 
 **AWS Transit Gateway**
+
+**Cache Controller**
+
+**AWS App2Container(A2C)**
+
+**AWS System Manager Inventory**
+
+**AWS Step Functions**
+
+**Workload Discovery**
+
+**AWS-X-Ray**
+
+**AWS Organizations**
+
+**Salesforce**
+
+**Amazon AppFlow**
+
+**Scala**
+
+**egress-only internet gateway**
+
+**AWS Transit Gateway**
+
+**AWS Directory Service**
+
+**AWS IAM Identity Center(AWS Single Sign-On)**
+
+**Service Control Principal (SCP)**
+
+**Amazon Comprehend**
+
+**Amazon Lex**
+
+**Amazon Polly**
+
+**Amazon Transcribe**
+
+**Amazon Translate**
+
+**Payment Card Industry Data Security Standards (PCI DSS)**
+
+**Amazon Macie**
+
+**AWS Storage Gateway File Gateway, AWS Storage Gateway Volume Gateway**
+
+**
