--- a/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
+++ b/devops/aws/SSA-C03/ExamTopics Keyword/Q301~400.md
@@ -1,60 +1,117 @@
-**Amazon Elastic Transcoder**
+다음은 각 용어에 대한 설명과 예시입니다.
 
-**AWS Storage Gateway Tape Gateway**
+### 1. **Amazon Elastic Transcoder**
+   - **설명**: Amazon Elastic Transcoder는 비디오 파일을 다양한 포맷으로 변환하는 서비스입니다. 다양한 장치와 화면 크기에서 비디오를 재생할 수 있도록 자동으로 최적화된 비디오를 제공합니다.
+   - **예시**: 대기업이 온라인 비디오 스트리밍 서비스에서 사용자가 다양한 장치에서 비디오를 스트리밍할 수 있도록 비디오 파일을 변환하는 경우 사용됩니다.
 
-**AWS Storage Gateway Volume Gateway stored volumes**
+### 2. **AWS Storage Gateway Tape Gateway**
+   - **설명**: AWS Storage Gateway의 Tape Gateway는 기업의 물리적 테이프 백업 시스템을 클라우드로 확장하여 클라우드 기반의 테이프 백업을 지원합니다.
+   - **예시**: 기존의 테이프 백업 시스템을 운영 중인 기업이 AWS의 클라우드에서 테이프 백업을 생성하고 복원하는 데 사용됩니다.
 
-**AWS Storage Gateway Volume Gateway cached volumes**
+### 3. **AWS Storage Gateway Volume Gateway Stored Volumes**
+   - **설명**: AWS Storage Gateway의 Volume Gateway는 데이터를 로컬 저장소에 저장하고 이를 AWS 클라우드로 백업하는 서비스입니다. Stored Volumes는 모든 데이터를 로컬에 저장하고, 백업만 클라우드에 보냅니다.
+   - **예시**: 온프레미스 서버에서 중요한 데이터를 AWS 클라우드에 백업하려는 기업이 사용합니다.
 
-**AWS Backup**
+### 4. **AWS Storage Gateway Volume Gateway Cached Volumes**
+   - **설명**: Cached Volumes는 데이터를 AWS 클라우드에만 저장하고, 자주 사용하는 데이터는 로컬에 캐시합니다.
+   - **예시**: 주로 사용하지 않는 데이터를 AWS 클라우드에 두고, 빠른 접근이 필요한 데이터만 로컬에서 사용하는 환경에 적합합니다.
 
-**Amazon Macie**
+### 5. **AWS Backup**
+   - **설명**: AWS Backup은 AWS 리소스를 위한 완전한 백업 솔루션입니다. 이를 통해 EC2, RDS, EFS 등 다양한 AWS 리소스의 데이터를 백업하고 복구할 수 있습니다.
+   - **예시**: 대기업이 데이터 손실 방지 및 규정 준수를 위해 모든 AWS 리소스에 대한 주기적인 백업을 수행할 때 사용합니다.
 
-**Amazon Detective**
+### 6. **Amazon Macie**
+   - **설명**: Amazon Macie는 기계 학습을 사용하여 AWS에서 저장된 민감한 데이터를 자동으로 탐지하고 보호하는 보안 서비스입니다.
+   - **예시**: 기업이 AWS S3 버킷에서 개인정보나 금융 정보를 자동으로 식별하고 보호할 때 사용합니다.
 
-**Amazon Data Lifecycle Manager(Amazon DLM)**
+### 7. **Amazon Detective**
+   - **설명**: Amazon Detective는 보안 데이터를 분석하고, 악의적인 활동을 추적하는 서비스입니다. AWS CloudTrail과 Amazon GuardDuty와 통합하여 보안 위협을 빠르게 분석합니다.
+   - **예시**: 보안 침해 사건이 발생했을 때, AWS 환경 내에서 의심스러운 활동을 추적하여 분석합니다.
 
-**Amazon EMR**
+### 8. **Amazon Data Lifecycle Manager (Amazon DLM)**
+   - **설명**: Amazon DLM은 EBS 볼륨 및 스냅샷의 수명 주기를 관리하는 서비스로, 자동화된 백업 및 삭제를 통해 데이터를 효율적으로 관리할 수 있습니다.
+   - **예시**: 기업이 매일 EBS 스냅샷을 자동으로 생성하고, 일정 기간 후에 이를 삭제하는 정책을 설정할 때 사용합니다.
 
-**QuickSight SPICE**
+### 9. **Amazon EMR (Elastic MapReduce)**
+   - **설명**: Amazon EMR은 Hadoop, Spark와 같은 빅데이터 처리 프레임워크를 클라우드에서 쉽게 실행할 수 있도록 지원하는 서비스입니다.
+   - **예시**: 대규모 데이터셋을 처리하고 분석하는 작업에서 사용됩니다. 예를 들어, 웹 로그 데이터를 분석할 때 사용됩니다.
 
-**AWS Glue Studio**
+### 10. **QuickSight SPICE**
+   - **설명**: SPICE( Super-fast, Parallel, In-memory Calculation Engine)는 Amazon QuickSight의 고속 인메모리 데이터 분석 엔진입니다.
+   - **예시**: 실시간 비즈니스 인사이트를 제공하는 대시보드를 만들 때, 대규모 데이터를 빠르게 분석하는 데 사용됩니다.
 
-**AWS Glue Elastic Views**
+### 11. **AWS Glue Studio**
+   - **설명**: AWS Glue Studio는 ETL(Extract, Transform, Load) 작업을 시각적으로 디자인하고 실행할 수 있는 인터페이스를 제공합니다.
+   - **예시**: 다양한 데이터 소스에서 데이터를 추출하고 변환하여 AWS 데이터 웨어하우스에 로드하는 작업을 쉽게 수행합니다.
 
-**AWS Lake Formation**
+### 12. **AWS Glue Elastic Views**
+   - **설명**: AWS Glue Elastic Views는 다양한 데이터베이스에서 실시간으로 데이터를 통합하고, AWS의 다양한 데이터 레이크 및 분석 서비스에 전달하는 서비스입니다.
+   - **예시**: 여러 데이터베이스의 데이터를 실시간으로 연동하여 비즈니스 인사이트를 제공합니다.
 
-**Lake Formation BluePrint**
+### 13. **AWS Lake Formation**
+   - **설명**: AWS Lake Formation은 데이터 레이크를 쉽게 구축하고 관리할 수 있도록 지원하는 서비스로, 보안 및 데이터 관리 기능을 제공합니다.
+   - **예시**: 조직이 다양한 소스에서 데이터를 수집하고 이를 AWS S3에 저장하여 분석하기 위해 사용합니다.
 
-**Lambda@Edge**
+### 14. **Lake Formation BluePrint**
+   - **설명**: Lake Formation BluePrint는 데이터 레이크를 구축하는 데 필요한 일련의 단계를 자동화하는 템플릿입니다.
+   - **예시**: 복잡한 데이터 레이크 구축 작업을 쉽게 자동화하여 빠르게 배포할 때 사용됩니다.
 
-**AWS Step Functions**
+### 15. **Lambda@Edge**
+   - **설명**: Lambda@Edge는 AWS Lambda의 확장 기능으로, CloudFront와 함께 글로벌 엣지 위치에서 서버리스 코드를 실행할 수 있게 해줍니다.
+   - **예시**: 사용자의 요청에 따라 콘텐츠를 동적으로 수정하거나 리디렉션할 때 사용됩니다.
 
-**io2 Block Express EBS**
+### 16. **AWS Step Functions**
+   - **설명**: AWS Step Functions는 여러 AWS 서비스 간의 워크플로우를 오케스트레이션할 수 있는 서비스로, 상태 머신을 구성하여 자동화된 작업을 정의합니다.
+   - **예시**: 데이터 처리, 파일 변환, 사용자 인증 프로세스를 자동화하는 데 사용됩니다.
 
-**SSD(gp2)**
+### 17. **io2 Block Express EBS**
+   - **설명**: io2 Block Express는 고성능, 고용량을 지원하는 EBS 볼륨으로, 빠른 IOPS(초당 입출력 작업 수)와 저지연을 제공합니다.
+   - **예시**: 데이터베이스와 같은 높은 성능 요구 사항이 있는 애플리케이션에서 사용됩니다.
 
-**Amazon Lightsail**
+### 18. **SSD (gp2)**
+   - **설명**: General Purpose SSD (gp2)는 일반적인 용도로 사용할 수 있는 SSD 유형으로, 적절한 성능과 비용 효율성을 제공합니다.
+   - **예시**: 웹 애플리케이션 서버나 일반적인 데이터베이스 운영에 적합합니다.
 
-**AWS Batch**
+### 19. **Amazon Lightsail**
+   - **설명**: Amazon Lightsail은 간단한 VPS(가상 사설 서버) 호스팅 서비스를 제공하는 AWS의 서비스로, 웹 애플리케이션과 웹사이트를 빠르게 배포할 수 있습니다.
+   - **예시**: 스타트업이나 중소기업이 웹 애플리케이션을 배포하고 관리하는 데 사용됩니다.
 
-**Amazon FSx for Window File Server**
+### 20. **AWS Batch**
+   - **설명**: AWS Batch는 대규모 배치 컴퓨팅 작업을 자동으로 스케줄링하고 실행할 수 있는 서비스입니다.
+   - **예시**: 대량의 데이터 처리 작업을 일정에 맞춰 자동으로 실행하는 데 사용됩니다.
 
-**General Purpose SSD(gp2) Amazon Elastic Block Store(Amazon EBS)**
+### 21. **Amazon FSx for Windows File Server**
+   - **설명**: Amazon FSx for Windows File Server는 Windows 기반 파일 시스템을 제공하며, Windows 파일 서버 기능을 클라우드에서 제공합니다.
+   - **예시**: 온프레미스 Windows 파일 서버를 AWS로 이전하려는 기업에 사용됩니다.
 
-**Lambda@Edge**
+### 22. **General Purpose SSD (gp2) Amazon Elastic Block Store (Amazon EBS)**
+   - **설명**: Amazon EBS의 General Purpose SSD (gp2)는 균형 잡힌 성능을 제공하는 저장소 서비스입니다.
+   - **예시**: 웹 서버, 개발/테스트 환경에서의 사용에 적합합니다.
 
-**CloudFront origin request policy, CloudFront response headers policy**
+### 23. **CloudFront origin request policy, CloudFront response headers policy**
+   - **설명**: CloudFront origin request policy와 response headers policy는 CloudFront의 콘텐츠 전송을 제어하는 규칙입니다.
+   - **예시**: CloudFront를 통해 사용자 요청에 맞는 특정 헤더를 추가하거나 원본 서버에 요청을 보내는 방식에 따라 콘텐츠를 최적화합니다.
 
-**AWS App Runner**
+### 1. **NAT Instance VS NAT Gateway**
+   - **NAT Instance**
+     - **설명**: NAT Instance는 AWS EC2 인스턴스를 사용하여 비공개 서브넷의 인스턴스들이 인터넷에 접근할 수 있도록 해주는 서비스입니다. 자체적으로 관리해야 하며, 트래픽 처리 용량은 EC2 인스턴스의 성능에 의존합니다.
+     - **예시**: 작은 규모의 환경에서 인터넷 연결이 필요한 내부 서버들이 있을 때 사용됩니다. 예를 들어, 개발 환경에서만 필요하거나 테스트 용도로 사용될 수 있습니다.
+   - **NAT Gateway**
+     - **설명**: NAT Gateway는 AWS에서 관리되는 서비스로, NAT 인스턴스와 유사한 역할을 하며, 더 높은 가용성 및 자동 확장성을 제공합니다. 트래픽 용량을 자동으로 조정하고, 장애 조치(failover) 기능을 제공합니다.
+     - **예시**: 대규모 또는 프로덕션 환경에서 높은 가용성과 성능을 요구하는 비공개 서브넷의 인터넷 액세스를 위해 사용됩니다.
 
-**NAT Instance VS NAT Gateway**
+### 2. **IPsec VPN Tunnel**
+   - **설명**: IPsec VPN 터널은 인터넷을 통해 안전하게 연결된 두 네트워크 간의 암호화된 연결을 제공하는 기술입니다. AWS에서는 이 기능을 사용하여 온프레미스 데이터 센터와 VPC 간에 안전한 연결을 설정할 수 있습니다.
+   - **예시**: 온프레미스 네트워크와 AWS 클라우드를 연결하여 서로 다른 데이터 센터와 클라우드 환경 간에 보안 연결을 유지할 때 사용됩니다. 예를 들어, 하이브리드 클라우드 환경을 구축하는 경우 유용합니다.
 
-**IPsec VPN tunnel**
+### 3. **AWS Step Functions**
+   - **설명**: AWS Step Functions는 여러 AWS 서비스들을 연결하여 복잡한 작업을 자동화하고 오케스트레이션하는 서비스입니다. 이를 통해 여러 단계의 작업을 정의하고, 이를 순차적 또는 병렬로 처리할 수 있습니다.
+   - **예시**: 대규모 데이터 처리 파이프라인을 관리하는 데 사용됩니다. 예를 들어, 데이터 수집, 변환, 로드(ETL) 작업을 자동화하여 단계별로 처리할 때 사용됩니다.
 
-**AWS Step Function**
+### 4. **Amazon Transcribe**
+   - **설명**: Amazon Transcribe는 오디오 및 비디오 파일을 텍스트로 변환하는 음성 인식 서비스입니다. 다양한 언어를 지원하며, 실시간 또는 배치 처리로 텍스트 변환을 할 수 있습니다.
+   - **예시**: 고객 서비스 콜을 텍스트로 변환하여 분석하는 경우, 미팅 내용을 텍스트로 기록하는 데 유용합니다. 예를 들어, 콜센터에서 대화 내용을 자동으로 기록하고 분석할 때 사용됩니다.
 
-**Amazon Transcribe**
-
-**AWS Cloud Trail**
-
+### 5. **AWS CloudTrail**
+   - **설명**: AWS CloudTrail은 AWS 계정에서의 API 호출을 기록하고, 이를 통해 보안 감사, 변경 사항 추적, 문제 해결에 필요한 로그를 제공합니다. 서비스 사용자는 클라우드 리소스에 대한 액세스를 모니터링할 수 있습니다.
+   - **예시**: AWS 리소스에 대한 액세스나 변경 사항을 모니터링하여 보안 감사나 규정 준수를 지원합니다. 예를 들어, 보안 감사 팀이 AWS 리소스에 대한 모든 API 호출 기록을 검토할 때 사용됩니다.
